tests/baselines/reference/ComputedPropertyName5_es6.errors.txt
tests/cases/conformance/es6/computedPropertyNames/ComputedPropertyName5_es6.ts(1,18): error TS1005: ':' expected.
tests/cases/conformance/es6/computedPropertyNames/ComputedPropertyName5_es6.ts(1,28): error TS1005: ',' expected.
tests/cases/conformance/es6/computedPropertyNames/ComputedPropertyName5_es6.ts(1,32): error TS1128: Declaration or statement expected.
tests/cases/conformance/es6/computedPropertyNames/ComputedPropertyName5_es6.ts(1,18): error TS2304: Cannot find name 'get'.
tests/cases/conformance/es6/computedPropertyNames/ComputedPropertyName5_es6.ts(1,23): error TS2304: Cannot find name 'e'.


==== tests/cases/conformance/es6/computedPropertyNames/ComputedPropertyName5_es6.ts (5 errors) ====
    var v = { public get [e]() { } };
                     ~~~
!!! error TS1005: ':' expected.
                               ~
!!! error TS1005: ',' expected.
                                   ~
!!! error TS1128: Declaration or statement expected.
                     ~~~
!!! error TS2304: Cannot find name 'get'.
                          ~
!!! error TS2304: Cannot find name 'e'.